History
=======

Version 0.3
-----------

- Implemented reference collector based on the query-select widget in
  ``plone.z3cform``.

- In-browser preview is now adapted directly from the message that
  would have been dispatched as e-mail.

- Use email.Header module for message header formatting
  [naro]
  
- added Czech translation
  [naro]

Version 0.2
-----------

- Add an 'Already subscribed?" section to the "My subscriptions"
  page to retrieve your password.
  [nouri]

- added i18n:domain to browser/controlpanel-links.pt, removed extra quotes 
  from browser/channel.py, updated pot and danish translation
  [bartholdy]

- updated .pot and danish translation
  [bartholdy]

- apparently triplequoted strings do not get translated .. 
  this takes care of 
  https://bugs.launchpad.net/singing-dancing/+bug/218448
  [bartholdy]

- Don't use locale-dependent 'string.letters' when creating the
  ISalt utility.  This fixes
  https://bugs.launchpad.net/singing-dancing/+bug/217823
  [nouri]

- Extended portlet with optinal footertext
  [bartholdy]

- Added functionality to show a preview in the browser
  [malthe]